Fixed links, and added under construction to start your journey page.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           Whether you're seeking better energy, mental clarity, or physical wellbeing, there's a path forward. Join our community of wellness warriors taking control of their lives.
         </p>
         <div class="slide-in-up delay-400 flex flex-col sm:flex-row gap-4 justify-center">
-          <a href="recommendations.html" class="inline-flex items-center justify-center px-8 py-4 border border-transparent text-lg font-medium rounded-lg text-white bg-cyan-600 hover:bg-cyan-700 transition-colors duration-300">
+          <a href="start-your-journey.html" class="inline-flex items-center justify-center px-8 py-4 border border-transparent text-lg font-medium rounded-lg text-white bg-cyan-600 hover:bg-cyan-700 transition-colors duration-300">
             Start Your Journey
             <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
