--- a/about.html
+++ b/about.html
@@ -317,23 +317,73 @@
           </div>
         </div>
       </section>
-    </div>
 
-    <!-- Call to Action -->
-    <section class="bg-gradient-to-r from-cyan-600 to-cyan-700 rounded-2xl p-8 md:p-12 text-white text-center">
-      <h2 class="slide-in-up text-3xl font-bold mb-4">Join Us on This Journey</h2>
-      <p class="slide-in-up delay-200 text-cyan-100 mb-8 max-w-2xl mx-auto">
-        Whether you're focusing on gut health or physical vitality, there's a path that's right for you. Let's transform lives together.
-      </p>
-      <div class="slide-in-up delay-400 flex flex-col sm:flex-row gap-4 justify-center">
-        <a href="start-your-journey.html" class="inline-flex items-center justify-center px-6 py-3 bg-white text-cyan-600 font-semibold rounded-lg hover:bg-cyan-50 transition-colors duration-300">
-          Start Your Journey
-          <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
-          </svg>
-        </a>
-      </div>
-    </section>
+      <!-- My Favorite Products -->
+      <section class="mb-24">
+        <h2 class="slide-in-up text-4xl font-bold text-gray-900 text-center mb-12">My Favorite Products</h2>
+        <div class="grid md:grid-cols-2 gap-8 max-w-6xl mx-auto px-4">
+          <!-- Gut Health Product -->
+          <div class="slide-in-left bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
+            <div class="relative">
+              <div class="absolute -top-4 -right-4 bg-cyan-100 rounded-full p-3">
+                <svg class="w-6 h-6 text-cyan-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
+                </svg>
+              </div>
+              <img src="images/GutHealthTriad.png" alt="Gut Health Triad" class="w-full h-48 object-cover rounded-lg mb-6">
+              <h3 class="text-2xl font-bold text-gray-900 mb-4">Gut Health Triad</h3>
+              <p class="text-gray-600 mb-6">
+                The cornerstone of my gut health journey. This powerful compound supports digestive health and nutrient absorption, helping maintain a balanced gut microbiome.
+              </p>
+              <a href="https://nucleogenex.com/details/173/DickeyL/qr" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-cyan-600 hover:text-cyan-700 font-semibold">
+                Learn More
+                <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
+                </svg>
+              </a>
+            </div>
+          </div>
+
+          <!-- Clarity Perfect Water Product -->
+          <div class="slide-in-right bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
+            <div class="relative">
+              <div class="absolute -top-4 -right-4 bg-cyan-100 rounded-full p-3">
+                <svg class="w-6 h-6 text-cyan-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"/>
+                </svg>
+              </div>
+              <img src="images/ClarityPerfectWaterSystem.png" alt="Clarity Perfect Water" class="w-full h-48 object-cover rounded-lg mb-6">
+              <h3 class="text-2xl font-bold text-gray-900 mb-4">Clarity Perfect Water</h3>
+              <p class="text-gray-600 mb-6">
+                Revolutionary hydration solution that transformed my energy levels and overall wellness. Experience the difference proper hydration can make.
+              </p>
+              <a href="https://clarityperfect.com/8274/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-cyan-600 hover:text-cyan-700 font-semibold">
+                Learn More
+                <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Call to Action -->
+      <section class="bg-gradient-to-r from-cyan-600 to-cyan-700 rounded-2xl p-8 md:p-12 text-white text-center">
+        <h2 class="slide-in-up text-3xl font-bold mb-4">Join Us on This Journey</h2>
+        <p class="slide-in-up delay-200 text-cyan-100 mb-8 max-w-2xl mx-auto">
+          Whether you're focusing on gut health or physical vitality, there's a path that's right for you. Let's transform lives together.
+        </p>
+        <div class="slide-in-up delay-400 flex flex-col sm:flex-row gap-4 justify-center">
+          <a href="start-your-journey.html" class="inline-flex items-center justify-center px-6 py-3 bg-white text-cyan-600 font-semibold rounded-lg hover:bg-cyan-50 transition-colors duration-300">
+            Start Your Journey
+            <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
+            </svg>
+          </a>
+        </div>
+      </section>
+    </div>
   </main>
 
   <!-- Footer -->
