--- a/index.html
+++ b/index.html
@@ -223,47 +223,47 @@
             </div>
             <!-- Decorative Background Elements -->
             <div class="absolute top-0 left-1/2 -translate-x-1/2 w-40 h-40 bg-cyan-100 rounded-full opacity-50 blur-xl float-animation-delayed"></div>
-            <div class="absolute top-4 left-1/4 w-16 h-16 bg-cyan-200 rounded-full opacity-30 blur-lg float-animation"></div>
-            <div class="absolute top-8 right-1/4 w-12 h-12 bg-cyan-300 rounded-full opacity-20 blur-md float-animation-delayed"></div>
+            <div class="absolute top-4 right-1/4 w-16 h-16 bg-cyan-200 rounded-full opacity-30 blur-lg float-animation"></div>
+            <div class="absolute top-8 left-1/4 w-12 h-12 bg-cyan-300 rounded-full opacity-20 blur-md float-animation-delayed"></div>
           </div>
 
           <h3 class="text-2xl font-bold text-gray-900 mb-4">Gut Health Triad</h3>
           <p class="text-gray-600 mb-6">
-            Complete digestive support featuring our signature blend of probiotics, digestive enzymes, and CoreBiome® tributyrin.
+            Transform your gut health with our powerful triad of supplements designed to optimize your digestive system.
           </p>
           <ul class="space-y-4 mb-6">
             <li class="flex items-start fade-in">
               <svg class="w-6 h-6 text-cyan-600 mr-3 flex-shrink-0 mt-0.5" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
               </svg>
-              <span class="text-gray-700">Breakthrough CoreBiome® tributyrin for optimal gut health</span>
+              <span class="text-gray-700">Supports digestive health and nutrient absorption</span>
             </li>
             <li class="flex items-start fade-in" style="animation-delay: 200ms;">
               <svg class="w-6 h-6 text-cyan-600 mr-3 flex-shrink-0 mt-0.5" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
               </svg>
-              <span class="text-gray-700">Clinically proven digestive enzyme blend</span>
+              <span class="text-gray-700">Maintains balanced gut microbiome</span>
             </li>
             <li class="flex items-start fade-in" style="animation-delay: 400ms;">
               <svg class="w-6 h-6 text-cyan-600 mr-3 flex-shrink-0 mt-0.5" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
               </svg>
-              <span class="text-gray-700">Supports healthy weight management</span>
+              <span class="text-gray-700">Enhances overall wellness and vitality</span>
             </li>
             <li class="flex items-start fade-in" style="animation-delay: 600ms;">
               <svg class="w-6 h-6 text-cyan-600 mr-3 flex-shrink-0 mt-0.5" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
               </svg>
-              <span class="text-gray-700">Enhances nutrient absorption by up to 80%</span>
+              <span class="text-gray-700">Tributyrin supports gut barrier integrity</span>
             </li>
             <li class="flex items-start fade-in" style="animation-delay: 800ms;">
               <svg class="w-6 h-6 text-cyan-600 mr-3 flex-shrink-0 mt-0.5" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
               </svg>
-              <span class="text-gray-700">Boosts energy levels and mental clarity</span>
+              <span class="text-gray-700">Nucleotides boost immune system function</span>
             </li>
           </ul>
-          <a href="https://agentnaturals.com/8274" class="group inline-flex items-center justify-center w-full px-6 py-3 bg-cyan-600 text-white font-semibold rounded-lg hover:bg-cyan-700 transition-all duration-300 transform hover:scale-[1.02]">
+          <a href="https://nucleogenex.com/details/173/DickeyL/qr" target="_blank" rel="noopener noreferrer" class="group inline-flex items-center justify-center w-full px-6 py-3 bg-cyan-600 text-white font-semibold rounded-lg hover:bg-cyan-700 transition-all duration-300 transform hover:scale-[1.02]">
             Learn More
             <svg class="w-5 h-5 ml-2 transition-transform duration-300 group-hover:translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
