Fixed mobile bug with right gap, and fixed animations on index and about pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
+      overflow-x: hidden;
+      width: 100%;
+      position: relative;
+    }
+    html {
+      overflow-x: hidden;
+      width: 100%;
     }
     .hero-background {
       background: linear-gradient(270deg, #5de2e2, #006e8a);
