--- a/about.html
+++ b/about.html
@@ -11,6 +11,13 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
+      overflow-x: hidden;
+      width: 100%;
+      position: relative;
+    }
+    html {
+      overflow-x: hidden;
+      width: 100%;
     }
 
     /* Enhanced Slide Animations */
