--- a/index.html
+++ b/index.html
@@ -19,29 +19,101 @@
       overflow-x: hidden;
       width: 100%;
     }
+
     .hero-background {
-      background: linear-gradient(270deg, #5de2e2, #006e8a);
+      position: relative;
+      overflow: hidden;
+      background: linear-gradient(270deg, rgba(93, 226, 226, 0.2), rgba(0, 110, 138, 0.3));
       background-size: 200% 200%;
       animation: gradientAnimation 10s ease infinite;
-      position: relative;
+      height: 100vh;
     }
-    .hero-background::before,
-    .hero-background::after {
-      content: '';
-      position: absolute;
-      left: 0;
-      right: 0;
-      height: 100px;
-      pointer-events: none;
-    }
-    .hero-background::before {
+
+    .hero-image {
+      position: fixed;
       top: 0;
-      background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      opacity: 0;
+      object-fit: cover;
+      object-position: center 25%;  /* Default position for mobile - adjusted from 30% */
+      transition: opacity 2s ease-in-out;
+      transform: scale(1.05);
+      filter: saturate(0.7) brightness(0.85) sepia(0.2) hue-rotate(190deg);
+      will-change: transform;
     }
-    .hero-background::after {
-      bottom: 0;
-      background: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+
+    /* Adjust image position for desktop view */
+    @media (min-width: 768px) {
+      .hero-image {
+        object-position: center 28%;  /* Show more of the top on desktop - adjusted from 20% */
+      }
     }
+
+    /* Special positioning for the transformation image on mobile */
+    .hero-image[src*="healthjourneytransformation1"] {
+      object-position: 95% center;  /* Show more of the right side on mobile */
+    }
+
+    .hero-image[src*="FamilySupport"] {
+      object-position: center 30%;  /* Show more of the top portion on mobile */
+    }
+
+    @media (min-width: 768px) {
+      .hero-image[src*="healthjourneytransformation1"] {
+        object-position: center 15%;  /* Reset to normal desktop position */
+      }
+
+      .hero-image[src*="FamilySupport"] {
+        object-position: center 20%;  /* Show slightly more of the top on desktop */
+      }
+    }
+
+    .hero-image.active {
+      opacity: 0.9;
+    }
+
+    .parallax-wrapper {
+      position: relative;
+      height: 100vh;
+      transform-style: preserve-3d;
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 10;
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(2px);
+      padding: 2rem;
+      border-radius: 1rem;
+      transform: translateZ(0);
+    }
+
+    .hero-text {
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3),
+                   0 0 20px rgba(0, 0, 0, 0.1);
+      color: white;
+    }
+
+    .hero-paragraph {
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3),
+                   0 0 15px rgba(0, 0, 0, 0.1);
+      color: white;
+    }
+
+    .hero-float {
+      animation: heroFloat 20s ease-in-out infinite;
+    }
+
+    @keyframes heroFloat {
+      0% { transform: scale(1.1) translate(0, 0); }
+      25% { transform: scale(1.1) translate(5px, 2px); }
+      50% { transform: scale(1.1) translate(0, 5px); }
+      75% { transform: scale(1.1) translate(-5px, 2px); }
+      100% { transform: scale(1.1) translate(0, 0); }
+    }
+
     @keyframes gradientAnimation {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
@@ -116,6 +188,12 @@
     .delay-400 { transition-delay: 400ms; }
     .delay-500 { transition-delay: 500ms; }
     .delay-600 { transition-delay: 600ms; }
+
+    .hero-section {
+      position: relative;
+      height: 100vh;
+      overflow: hidden;
+    }
   </style>
   <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
 </head>
@@ -165,25 +243,33 @@
   </div>
 
   <!-- Hero Section -->
-  <section class="relative bg-gradient-to-br from-cyan-50 to-white">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-24 md:py-32">
-      <div class="text-center">
-        <h1 class="slide-in-up text-4xl md:text-5xl lg:text-6xl font-bold text-gray-900 mb-6">
-          Your Wellness Journey <span class="text-cyan-600">Starts Here</span>
-        </h1>
-        <p class="slide-in-up delay-200 text-xl md:text-2xl text-gray-600 max-w-3xl mx-auto mb-8">
-          Whether you're seeking better energy, mental clarity, or physical wellbeing, there's a path forward. Join our community of wellness warriors taking control of their lives.
-        </p>
-        <div class="slide-in-up delay-400 flex flex-col sm:flex-row gap-4 justify-center">
-          <a href="start-your-journey.html" class="inline-flex items-center justify-center px-8 py-4 border border-transparent text-lg font-medium rounded-lg text-white bg-cyan-600 hover:bg-cyan-700 transition-colors duration-300">
-            Start Your Journey
-            <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
-            </svg>
-          </a>
-          <a href="about.html" class="inline-flex items-center justify-center px-8 py-4 border border-cyan-600 text-lg font-medium rounded-lg text-cyan-600 hover:bg-cyan-50 transition-colors duration-300">
-            Read My Story
-          </a>
+  <section class="hero-section relative bg-gradient-to-br from-cyan-50 to-white">
+    <div class="hero-background parallax-wrapper">
+      <img src="images/Now.jpg" class="hero-image" alt="Journey Image 1">
+      <img src="images/TurningPoint.jpg" class="hero-image" alt="Journey Image 2">
+      <img src="images/healthjourneytransformation1.jpg" class="hero-image" alt="Journey Image 3">
+      <img src="images/FamilySupport.jpg" class="hero-image" alt="Journey Image 4">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-24 md:py-32 relative">
+        <div class="hero-content">
+          <div class="text-center">
+            <h1 class="slide-in-up hero-text text-4xl md:text-5xl lg:text-6xl font-bold mb-6">
+              Your Wellness Journey <span class="text-cyan-200">Starts Here</span>
+            </h1>
+            <p class="slide-in-up delay-200 hero-paragraph text-xl md:text-2xl max-w-3xl mx-auto mb-8">
+              Whether you're seeking better energy, mental clarity, or physical wellbeing, there's a path forward. Join our community of wellness warriors taking control of their lives.
+            </p>
+            <div class="slide-in-up delay-400 flex flex-col sm:flex-row gap-4 justify-center">
+              <a href="start-your-journey.html" class="inline-flex items-center justify-center px-8 py-4 border border-transparent text-lg font-medium rounded-lg text-white bg-cyan-600 hover:bg-cyan-700 transition-colors duration-300">
+                Start Your Journey
+                <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
+                </svg>
+              </a>
+              <a href="about.html" class="inline-flex items-center justify-center px-8 py-4 border-2 border-white text-lg font-medium rounded-lg text-white hover:bg-white hover:text-cyan-600 transition-colors duration-300">
+                Read My Story
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
