--- a/start-your-journey.html
+++ b/start-your-journey.html
@@ -195,9 +195,9 @@
 
       <!-- Founding Members Card -->
       <div class="bg-white rounded-xl shadow-md p-8 slide-in-up delay-300">
-        <h2 class="text-2xl font-bold text-gray-900 mb-4">Founding Member Benefits</h2>
+        <h2 class="text-2xl font-bold text-gray-900 mb-4">Pioneer Member Benefits</h2>
         <p class="text-gray-600 mb-6">
-          As a founding member, you'll be at the forefront of our community, enjoying exclusive benefits and early access to everything we create.
+          As a pioneer member, you'll be at the forefront of our community, enjoying exclusive benefits and early access to everything we create.
         </p>
         <ul class="space-y-4 text-gray-600">
           <li class="flex items-start">
@@ -225,7 +225,7 @@
     <!-- Newsletter Section -->
     <section class="bg-gradient-to-br from-cyan-50 to-white py-16 rounded-2xl">
       <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-        <h2 class="slide-in-up text-3xl font-bold text-gray-900 mb-4">Join Our Founding Members</h2>
+        <h2 class="slide-in-up text-3xl font-bold text-gray-900 mb-4">Join Our Pioneer Members</h2>
         <p class="slide-in-up delay-200 text-gray-600 mb-8">
           Be the first to know about our upcoming features and get exclusive early access to our community.
         </p>
